--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -13,7 +13,7 @@
 <body>
     <header id="menu">
         <nav class="listamenu">
-            <img class="logo" src="assets/LOGO-LouerTech.svg" alt="">
+            <img class="logo" src="../assets/LOGO-LouerTech.svg" alt="">
             <ul class="lista_centro">
                 <a href="index.html">
                     <li>Home</li>
@@ -31,9 +31,9 @@
             <ul class="lista_direita">
                 <a href="">
                     <button>Faça seu login!</button>
-                    <img src="assets/USER 2.svg" alt="">
+                    <img src="../assets/USER 2.svg" alt="">
                 </a>
-                <li><img src="assets/carrinho-de-compras.svg" alt=""></li>
+                <li><img src="../assets/carrinho-de-compras.svg" alt=""></li>
             </ul>
         </nav>
     </header>
@@ -51,16 +51,16 @@
     </section>
 
     <section id="tipo_equipamentos">
-        <div class="div_equipamentos" id="toggleNotebooks"><img src="assets/notebook.svg" alt=""><span>Notebooks</span>
+        <div class="div_equipamentos" id="toggleNotebooks"><img src="../assets/notebook.svg" alt=""><span>Notebooks</span>
         </div>
-        <div class="div_equipamentos" id="toggleDesktops"><img src="assets/monitor.svg" alt=""><span>Desktops</span>
+        <div class="div_equipamentos" id="toggleDesktops"><img src="../assets/monitor.svg" alt=""><span>Desktops</span>
         </div>
-        <div class="div_equipamentos" id="toggleTablets"><img src="assets/tablet.svg" alt=""><span>Tablets</span></div>
-        <div class="div_equipamentos" id="toggleSmartphones"><img src="assets/telefone-celular.svg"
+        <div class="div_equipamentos" id="toggleTablets"><img src="../assets/tablet.svg" alt=""><span>Tablets</span></div>
+        <div class="div_equipamentos" id="toggleSmartphones"><img src="../assets/telefone-celular.svg"
                 alt=""><span>Smartphones</span></div>
-        <div class="div_equipamentos" id="toggleTelaProjecao"><img src="assets/tela-de-projecao.svg" alt=""><span>Telas
+        <div class="div_equipamentos" id="toggleTelaProjecao"><img src="../assets/tela-de-projecao.svg" alt=""><span>Telas
                 de projeção</span></div>
-        <div class="div_equipamentos" id="toggleProjetores"><img src="assets/projetor.svg"
+        <div class="div_equipamentos" id="toggleProjetores"><img src="../assets/projetor.svg"
                 alt=""><span>Projetores</span></div>
     </section>
 
@@ -69,17 +69,17 @@
             <h2>Notebooks</h2>
             <div class="equipamentos">
                 <div class="equipamentos_item">
-                    <img src="assets/notebook1.svg" alt="" style="width: 300px;">
+                    <img src="../assets/notebook1.svg" alt="" style="width: 300px;">
                     <p>Notebook Lenovo Ideapad 320 Core i5 HD 1TB 8GB Win 10 Pro</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/notebook2.png" alt="" style="width: 300px;">
+                    <img src="../assets/notebook2.png" alt="" style="width: 300px;">
                     <p>Notebook ASUS X515JA-BR3932W Core i3 4GB 128GB SSD 15,6" Cinza</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/notebook3.png" alt="">
+                    <img src="../assets/notebook3.png" alt="">
                     <p>Notebook Samsung Galaxy Book Go Snapdragon 7c 4gb 128gb Ssd</p>
                     <button>Solicitar equipamento</button>
                 </div>
@@ -90,17 +90,17 @@
             <h2>Desktops</h2>
             <div class="equipamentos">
                 <div class="equipamentos_item">
-                    <img src="assets/computador1.svg" alt="">
+                    <img src="../assets/computador1.svg" alt="">
                     <p>Imac A1418 Core I5 SSD 240GB 8GB MacOS X 10.9.5</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/desktop2.png" alt="" style="width:fit-content;">
+                    <img src="../assets/desktop2.png" alt="" style="width:fit-content;">
                     <p>All In One Lg 22v280 Intel Celeron N4100 21,5 500gb 4gb</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/desktop3.png" alt="">
+                    <img src="../assets/desktop3.png" alt="">
                     <p>Computador Completo Intel Corporate 8gb Hd 500gb</p>
                     <button>Solicitar equipamento</button>
                 </div>
@@ -111,17 +111,17 @@
             <h2>Tablets</h2>
             <div class="equipamentos">
                 <div class="equipamentos_item">
-                    <img src="assets/tablet1.svg" alt="">
+                    <img src="../assets/tablet1.svg" alt="">
                     <p>iPad 5a Geração 32GB Space Gray 9,7"- Apple</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/tablet2.png" alt="">
+                    <img src="../assets/tablet2.png" alt="">
                     <p>Tablet Samsung Galaxy A7 Lite 64GB, WiFi, Android 11, Tela de 8.7´, Grafite</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/tablet3.png" alt="">
+                    <img src="../assets/tablet3.png" alt="">
                     <p>Tablet Samsung Galaxy Tab S6 Lite 4G 128GB Tela 10,4" + Caneta S Pen</p>
                     <button>Solicitar equipamento</button>
                 </div>
@@ -132,17 +132,17 @@
             <h2>Smartphones</h2>
             <div class="equipamentos">
                 <div class="equipamentos_item">
-                    <img src="assets/smartphone1.png" alt="">
+                    <img src="../assets/smartphone1.png" alt="">
                     <p>iPhone XR Apple(128GB) Branco Tela6,1" 4G iOS</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/smartphone2.png" alt="">
+                    <img src="../assets/smartphone2.png" alt="">
                     <p>Samsung Galaxy A04s Branco 64GB, 4GB RAM, Tela Infinita de 6.5" 90 Hz</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/smartphone3.png" alt="" style="width: fit-content;">
+                    <img src="../assets/smartphone3.png" alt="" style="width: fit-content;">
                     <p>Smartphone Motorola Moto E22 4G 64GB 6,5" Azul</p>
                     <button>Solicitar equipamento</button>
                 </div>
@@ -153,17 +153,17 @@
             <h2>Telas de Projeção</h2>
             <div class="equipamentos">
                 <div class="equipamentos_item">
-                    <img src="assets/teladeprojecao1.png" alt="">
+                    <img src="../assets/teladeprojecao1.png" alt="">
                     <p>Tela De Projeção 70 Polegas Com Tripé Retrátil 2,5m</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/teladeprojecao2.png" alt="">
+                    <img src="../assets/teladeprojecao2.png" alt="">
                     <p>Tela de projeção 16:9 84/100/120 polegadas de parede 4k hd</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/teladeprojecao3.png" alt="">
+                    <img src="../assets/teladeprojecao3.png" alt="">
                     <p>TELA DE PROJEÇÃO TRIPÉ TBTPS70 (1.80x1.80m)</p>
                     <button>Solicitar equipamento</button>
                 </div>
@@ -174,17 +174,17 @@
             <h2>Projetores</h2>
             <div class="equipamentos">
                 <div class="equipamentos_item">
-                    <img src="assets/projetor1.png" alt="">
+                    <img src="../assets/projetor1.png" alt="">
                     <p>Projetor T6 LCD 1280 x 720P 3500 Lumens LED USB HDMI Media Player</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/projetor2.png" alt="" style="width: fit-content;">
+                    <img src="../assets/projetor2.png" alt="" style="width: fit-content;">
                     <p>Projetor Benq MS536 Svga 4.000 ANSI Lúmens</p>
                     <button>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
-                    <img src="assets/projetor3.png" alt="">
+                    <img src="../assets/projetor3.png" alt="">
                     <p>Projetor Epson Powerlite S31+ 3200 Lumens</p>
                     <button>Solicitar equipamento</button>
                 </div>
@@ -195,7 +195,7 @@
     <footer>
         <div class="conteudo_footer">
             <div class="divs_footer">
-                <img src="assets/LOGO-LouerTech-versaobranca.png" alt="">
+                <img src="../assets/LOGO-LouerTech-versaobranca.png" alt="">
             </div>
             <div class="divs_footer">
                 <span>LOCAÇÃO DE EQUIPAMENTOS</span>
@@ -226,8 +226,8 @@
                     <li>louertech@gmail.com</li>
                     <br>
                     <li>
-                        <a href="#"><img src="assets/instagram.svg" alt=""></a>
-                        <a href="#"><img src="assets/linkedin.svg" alt=""></a>
+                        <a href="#"><img src="../assets/instagram.svg" alt=""></a>
+                        <a href="#"><img src="../assets/linkedin.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -239,7 +239,7 @@
                     <br>
                     <br>
                     <a href="https://goo.gl/maps/L6dartdB13MJQ5ii6" target="_blank">Abrir mapa
-                        <img src="assets/link-externo.svg" alt="">
+                        <img src="../assets/link-externo.svg" alt="">
                     </a>
                 </p>
             </div>
