--- a/orcamento/orcamento.html
+++ b/orcamento/orcamento.html
@@ -38,9 +38,13 @@
 
         </header>
 
+        <!--Fim da header-->
+
+        <!--Backgroud azul com logo branco-->
         <div id="fundo_imagem">
             <img class="logo_branco" src="../assets/LOGO-UC2-versaobranca-removebg-preview 8 (1).png" alt="logo_branco">
         </div>
+        <!-- fim Backgroud azul com logo branco-->
 
         <section>
             <div id="div_caixas">
