--- a/home/home.html
+++ b/home/home.html
@@ -5,9 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
+    <header id="menu">
+        <nav class="listamenu">
+            <img class="logo" src="../assets/LOGO-LouerTech.svg" alt="">
+            <ul class="lista_centro">
+                <a href="index.html">
+                    <li>Home</li>
+                </a>
+                <a href="equipamentos.html">
+                    <li>Equipamentos</li>
+                </a>
+                <a href="#">
+                    <li>LouerLab</li>
+                </a>
+                <a href="#">
+                    <li>Orçamento</li>
+                </a>
+            </ul>
+            <ul class="lista_direita">
+                <a href="">
+                    <button>Faça seu login!</button>
+                    <img src="../assets/USER 2.svg" alt="">
+                </a>
+                <li><img src="../assets/carrinho-de-compras.svg" alt=""></li>
+            </ul>
+        </nav>
+    </header>
+
     
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla ipsa quasi incidunt numquam atque, rerum totam error qui corporis nihil eos porro odio reprehenderit provident aliquam at perferendis. Doloremque.</p>
+
+
+    <footer>
+        <div class="conteudo_footer">
+            <div class="divs_footer">
+                <img src="../assets/LOGO-LouerTech-versaobranca.png" alt="">
+            </div>
+            <div class="divs_footer">
+                <span>LOCAÇÃO DE EQUIPAMENTOS</span>
+                <ul>
+                    <li>Notebooks</li>
+                    <li>Computadores</li>
+                    <li>Tablets</li>
+                    <li>Smartphones</li>
+                    <li>Tela de Projeção</li>
+                    <li>Projetores</li>
+                </ul>
+            </div>
+            <div class="divs_footer">
+                <span>SOBRE NÓS</span>
+                <ul>
+                    <li>LouerLab</li>
+                    <li>Por que alugar?</li>
+                    <li>Como alugar?</li>
+                </ul>
+            </div>
+            <div class="divs_footer" style="margin-right: 50px;">
+                <span>CONTATO</span>
+                <ul>
+                    <li>+55 11 98090-7309</li>
+                    <li>+55 11 94818-5116</li>
+                    <br>
+                    <li>contato@louertech.com.br</li>
+                    <li>louertech@gmail.com</li>
+                    <br>
+                    <li>
+                        <a href="#"><img src="../assets/instagram.svg" alt=""></a>
+                        <a href="#"><img src="../assets/linkedin.svg" alt=""></a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="divs_footer">
+                <span>ONDE ESTAMOS</span>
+                <p>Rua Tito, 54 - Vila Romana, São Paulo - SP
+                    CEP: 05051-000
+                    <br>
+                    <br>
+                    <a href="https://goo.gl/maps/L6dartdB13MJQ5ii6" target="_blank">Abrir mapa
+                        <img src="../assets/link-externo.svg" alt="">
+                    </a>
+                </p>
+            </div>
+            <div class="topo_pagina">
+                <a href="#busca_equipamentos"><span class="material-symbols-outlined">expand_less</span></a>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
+        </div>
+    </footer>
 </body>
 </html>
