--- a/home/home.html
+++ b/home/home.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LouerTech</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
 </head>
 <body>
     <header id="menu">
         <nav class="listamenu">
             <img class="logo" src="../assets/LOGO-LouerTech.svg" alt="">
             <ul class="lista_centro">
-                <a href="index.html">
+                <a href="home.html">
                     <li>Home</li>
                 </a>
-                <a href="equipamentos.html">
+                <a href="../produtos/produtos.html">
                     <li>Equipamentos</li>
                 </a>
                 <a href="#">
