--- a/login/login.html
+++ b/login/login.html
@@ -42,7 +42,7 @@
                     </div> <!--final da div com o botão de entrar-->
 
                     <div class="form-link"> <!--incio da div para colocar o link da página de registro-->
-                        <span>Não tem uma conta? <a href="#" class="link signup-link">Inscreva-se</a></span>
+                        <span>Não tem uma conta? <a href="../registro/cadastro.html" class="link signup-link">Inscreva-se</a></span>
                     </div> <!--final da div para colocar o link de registro-->
                 </form>
             </div>
