--- a/louerlab/louerlab.html
+++ b/louerlab/louerlab.html
@@ -7,7 +7,7 @@
     <title>LouerLab </title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="louerlab.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
 </head>
 <body>
     <main class="LouerLab">
@@ -15,21 +15,21 @@
             <nav class="listamenu">
                 <img class="logo" src="../assets/LOGO-LouerTech.svg" alt="">
                 <ul class="lista_centro">
-                    <a href="index.html">
+                    <a href="../home/home.html">
                         <li>Home</li>
                     </a>
-                    <a href="equipamentos.html">
+                    <a href="../produtos/produtos.html">
                         <li>Equipamentos</li>
                     </a>
-                    <a href="#">
+                    <a href="../louerlab/louerlab.html">
                         <li>LouerLab</li>
                     </a>
-                    <a href="#">
+                    <a href="../orcamento/orcamento.html">
                         <li>Orçamento</li>
                     </a>
                 </ul>
                 <ul class="lista_direita">
-                    <a href="">
+                    <a href="../login/login.html">
                         <button>Faça seu login!</button>
                         <img src="../assets/USER 2.svg" alt="">
                     </a>
