--- a/home/home.html
+++ b/home/home.html
@@ -19,15 +19,15 @@
                 <a href="../produtos/produtos.html">
                     <li>Equipamentos</li>
                 </a>
-                <a href="#">
+                <a href="../louerlab/louerlab.html">
                     <li>LouerLab</li>
                 </a>
-                <a href="#">
+                <a href="../orcamento/orcamento.html">
                     <li>Orçamento</li>
                 </a>
             </ul>
             <ul class="lista_direita">
-                <a href="">
+                <a href="../login/login.html">
                     <button>Faça seu login!</button>
                     <img src="../assets/USER 2.svg" alt="">
                 </a>
@@ -73,8 +73,8 @@
                     <li>louertech@gmail.com</li>
                     <br>
                     <li>
-                        <a href="#"><img src="../assets/instagram.svg" alt=""></a>
-                        <a href="#"><img src="../assets/linkedin.svg" alt=""></a>
+                        <a href="https://www.instagram.com/louertech/" target="_blank"><img src="../assets/instagram.svg" alt=""></a>
+                        <a href="https://www.linkedin.com/home" target="_blank"><img src="../assets/linkedin.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
