--- a/login/login.html
+++ b/login/login.html
@@ -49,14 +49,14 @@
             <div class="line"></div> <!--inicio/fim da linha para separar o login com o login com alguma rede social-->
 
             <div class="media-options"> <!--inicio da div com a opção de login do facebook-->
-                <a href="#" class="field facebook">
+                <a href="https://www.facebook.com" class="field facebook">
                     <i class='bx bxl-facebook facebook-icon'></i>
                     <span>Faça login com o Facebook</span>
                 </a>
             </div> <!--final da div com a opção de login com o facebook-->
 
             <div class="media-options"> <!--inicio da div com a opção de login com o google-->
-                <a href="#" class="field google">
+                <a href="https://mail.google.com/" class="field google">
                     <img src="../assets/google.jpg" alt="" class="google-img">
                     <span>Faça login com o Google</span>
                 </a>
