--- a/louerlab/louerlab.html
+++ b/louerlab/louerlab.html
@@ -182,8 +182,8 @@
                         <li>louertech@gmail.com</li>
                         <br>
                         <li>
-                            <a href="#"><img src="../assets/instagram.svg" alt=""></a>
-                            <a href="#"><img src="../assets/linkedin.svg" alt=""></a>
+                            <a href="https://www.instagram.com/louertech/" target="_blank"><img src="../assets/instagram.svg" alt=""></a>
+                            <a href="https://br.linkedin.com/" target="_blank"><img src="../assets/linkedin.svg" alt=""></a>
                         </li>
                     </ul>
                 </div>
