--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -15,16 +15,16 @@
         <nav class="listamenu">
             <img class="logo" src="../assets/LOGO-LouerTech.svg" alt="">
             <ul class="lista_centro">
-                <a href="index.html">
+                <a href="../home/home.html">
                     <li>Home</li>
                 </a>
-                <a href="equipamentos.html">
+                <a href="../produtos/produtos.html">
                     <li>Equipamentos</li>
                 </a>
-                <a href="#">
+                <a href="../louerlab/louerlab.html">
                     <li>LouerLab</li>
                 </a>
-                <a href="#">
+                <a href="../orcamento/orcamento.html">
                     <li>Orçamento</li>
                 </a>
             </ul>
@@ -76,12 +76,12 @@
                 <div class="equipamentos_item">
                     <img src="../assets/notebook2.png" alt="" style="width: 300px;">
                     <p>Notebook ASUS X515JA-BR3932W Core i3 4GB 128GB SSD 15,6" Cinza</p>
-                    <button>Solicitar equipamento</button>
+                    <button> <a href="../orcamento/orcamento.html"> </a>Solicitar equipamento</button>
                 </div>
                 <div class="equipamentos_item">
                     <img src="../assets/notebook3.png" alt="">
                     <p>Notebook Samsung Galaxy Book Go Snapdragon 7c 4gb 128gb Ssd</p>
-                    <button>Solicitar equipamento</button>
+                    <button> <a href="../orcamento/orcamento.html">Solicitar equipamento</button>
                 </div>
             </div>
         </div>
