--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LouerTech- Equipamentos</title>
+    <link rel="shortcut icon" href="../assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
     <link rel="stylesheet" href="produtos.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
