--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <nav class="listamenu">
             <img class="logo" src="../Louertech/assets/LOGO-LouerTech-versaoprincipal.png" alt="">
             <ul class="lista_centro">
-                <a href="home.html">
+                <a href="../Louertech/index.html">
                     <li>Home</li>
                 </a>
-                <a href="../produtos/produtos.html">
+                <a href="../Louertech/produtos/produtos.html">
                     <li>Equipamentos</li>
                 </a>
-                <a href="../louerlab/louerlab.html">
+                <a href="../Louertech/louerlab/louerlab.html">
                     <li>LouerLab</li>
                 </a>
-                <a href="../orcamento/orcamento.html">
+                <a href="../Louertech/orcamento/orcamento.html">
                     <li>Orçamento</li>
                 </a>
             </ul>
             <ul class="lista_direita">
-                <a href="../login/login.html">
+                <a href="../Louertech/login/login.html">
                     <button>Faça seu login!</button>
                     <img src="../Louertech/assets/USER 2.svg" alt="">
                 </a>
