--- a/registro/cadastro.html
+++ b/registro/cadastro.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <link rel="shortcut icon" href="../assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
+    <title>Cadastro- LouerTech</title>
     <link rel="stylesheet" href="cadastro.css" type="text/css" >
 </head>
 <body>
