--- a/orcamento/orcamento.html
+++ b/orcamento/orcamento.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
     <link rel="stylesheet" href="orcamento.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
-    <title>Louertech</title>
+    <title>Orçamento- Louertech</title>
 
 </head>
 
