--- a/louerlab/louerlab.html
+++ b/louerlab/louerlab.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LouerLab </title>
+    <title>LouerTech- LouerLab</title>
+    <link rel="shortcut icon" href="../assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="louerlab.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
