--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>LouerTech- Login</title>
+    <link rel="shortcut icon" href="../assets/LOGO-LouerTech-versaoprincipal.png" type="image/x-icon">
     <link rel="stylesheet" href="../login/login.css"  type="text/css" media="screen" />
 
    
