--- a/louerlab/louerlab.html
+++ b/louerlab/louerlab.html
@@ -201,7 +201,7 @@
                     </p>
                 </div>
                 <div class="topo_pagina">
-                    <a href="#busca_equipamentos"><span class="material-symbols-outlined">expand_less</span></a>
+                    <a href="#textPrincipal"><span class="material-symbols-outlined">expand_less</span></a>
                 </div>
             </div>
             <div class="copyright">
