--- a/orcamento/orcamento.html
+++ b/orcamento/orcamento.html
@@ -195,7 +195,7 @@
                     </p>
                 </div>
                 <div class="topo_pagina">
-                    <a href="#busca_equipamentos"><span class="material-symbols-outlined">expand_less</span></a>
+                    <a href="#fundo_imagem"><span class="material-symbols-outlined">expand_less</span></a>
                 </div>
             </div>
             <div class="copyright">
