--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -30,7 +30,7 @@
                 </a>
             </ul>
             <ul class="lista_direita">
-                <a href="">
+                <a href="../login/login.html">
                     <button>Faça seu login!</button>
                     <img src="../assets/USER 2.svg" alt="">
                 </a>
