--- a/registro/cadastro.html
+++ b/registro/cadastro.html
@@ -31,7 +31,7 @@
 
                 <input id="text" type="text" name="" id="" placeholder="Detalhe o seu evento:" required>
 
-                <input type="date" name="" id="" required>
+                <input type="date" name="" id="">
                 
                 <div class="sim">
                     <input id="sim" type="checkbox" name="opcao" value="fire" required>
