--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,42 +7,132 @@
     <title>home</title>
     <link rel="stylesheet" href="home/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 <body>
     <header id="menu">
         <nav class="listamenu">
-            <img class="logo" src="../Louertech/assets/LOGO-LouerTech-versaoprincipal.png" alt="">
+            <img class="logo" src="assets/LOGO-LouerTech.svg" alt="">
             <ul class="lista_centro">
-                <a href="../Louertech/index.html">
+                <a href="home/home.html">
                     <li>Home</li>
                 </a>
-                <a href="../Louertech/produtos/produtos.html">
+                <a href="produtos/produtos.html">
                     <li>Equipamentos</li>
                 </a>
-                <a href="../Louertech/louerlab/louerlab.html">
+                <a href="louerlab/louerlab.html">
                     <li>LouerLab</li>
                 </a>
-                <a href="../Louertech/orcamento/orcamento.html">
+                <a href="orcamento/orcamento.html">
                     <li>Orçamento</li>
                 </a>
             </ul>
             <ul class="lista_direita">
-                <a href="../Louertech/login/login.html">
+                <a href="login/login.html">
                     <button>Faça seu login!</button>
-                    <img src="../Louertech/assets/USER 2.svg" alt="">
+                    <img src="assets/USER 2.svg" alt="">
                 </a>
-                <li><img src="../Louertech/assets/carrinho-de-compras.svg" alt=""></li>
+                <li><img src="assets/carrinho-de-compras.svg" alt=""></li>
             </ul>
         </nav>
     </header>
 
-    
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner" style="height: 500px; width: 100%;">
+          <div class="carousel-item active">
+            <img src="assets/apresentação.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/apresentação2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/funcionarios.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+        
+    <section>
+        <div class="container">
+            <div class="div_informativos">
+                <div id="image">
+                 <img src="assets/LOGO-LouerTech-versaoprincipal.png" alt="" id="logo_informativo" style="width: 100px; height: fit-content;"><p style="color: #ffffff; font-size: 30px;"> LouerMobile</p><div>
+                  <br> 
+                  Outsoursing de aparelhos
+                   <br>
+                   celulares para fins administrativos
+                   <br>
+                   e também demonstrar a importância dos
+                   <br>
+                   de acessibilidade e responsividade para
+                   <br>
+                    de sites e aplicativos em apresentações
+                    <br>
+                    de trabalhos de conclusões de curso,
+                    <br>
+                    estande e apresentações empresáriais.
 
+            </div>
+
+            <div class="div_informativos">
+                <div id="image">
+                 <img src="assets/LOGO-LouerTech-versaoprincipal.png" alt="" id="logo_informativo" style="width: 100px; height: fit-content;"><p style="color: #ffffff; font-size: 30px;"> LouerDesk</p><div>
+                  <br> 
+                  Outsoursing de computadores
+                   <br>
+                  para demonstração de sites, plataformas
+                   <br>
+                    softwares, KPI's, indicadores de forma
+                   <br>
+                   mais explicita sendo observada por um 
+                   <br>
+                monitor e também de extrema importância
+                    <br>
+                    para exibição e acessibilidade das
+                    <br>
+                    plataformas apresentadas.
+
+            </div>
+
+            <div class="div_informativos">
+                <div id="image">
+                 <img src="assets/LOGO-LouerTech-versaoprincipal.png" alt="" id="logo_informativo" style="width: 100px; height: fit-content;"><p style="color: #ffffff; font-size: 30px;"> LouerTop</p><div>
+                  <br> 
+                  Outsoursing de laptops
+                   <br>
+                  para demonstração de sites, plataformas
+                   <br>
+                    softwares, KPI's, indicadores de forma
+                   <br>
+                   mais explicita sendo observada por um 
+                   <br>
+                monitor e também de extrema importância
+                    <br>
+                    para exibição e acessibilidade das
+                    <br>
+                    plataformas apresentadas.
+
+            </div>
+        </div>
+
+    </section>
 
     <footer>
         <div class="conteudo_footer">
             <div class="divs_footer">
-                <img src="../Louertech/assets/LOGO-LouerTech-versaobranca.png" alt="">
+                <img src="assets/LOGO-LouerTech-versaobranca.png" alt="">
             </div>
             <div class="divs_footer">
                 <span>LOCAÇÃO DE EQUIPAMENTOS</span>
@@ -73,8 +163,8 @@
                     <li>louertech@gmail.com</li>
                     <br>
                     <li>
-                        <a href="https://www.instagram.com/louertech/" target="_blank"><img src="../LouerTech/assets/instagram.svg" alt=""></a>
-                        <a href="https://www.linkedin.com/home" target="_blank"><img src="../LouerTech/assets/linkedin.svg" alt=""></a>
+                        <a href="https://www.instagram.com/louertech/" target="_blank"><img src="assets/instagram.svg" alt=""></a>
+                        <a href="https://www.linkedin.com/home" target="_blank"><img src="assets/linkedin.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +176,7 @@
                     <br>
                     <br>
                     <a href="https://goo.gl/maps/L6dartdB13MJQ5ii6" target="_blank">Abrir mapa
-                        <img src="../Louertech/assets/link-externo.svg" alt="">
+                        <img src="assets/link-externo.svg" alt="">
                     </a>
                 </p>
             </div>
@@ -99,4 +189,12 @@
         </div>
     </footer>
 </body>
+<script>
+    function Scrollativo() {
+    let menu = document.querySelector('#menu');//retorna o primeiro elemento do documento com id menu
+    menu.classList.toggle('ativo', scrollY > 0);
+}
+window.addEventListener('scroll', Scrollativo);//adicionando evento de rolagem
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </html>
