--- a/orcamento/orcamento.html
+++ b/orcamento/orcamento.html
@@ -204,4 +204,11 @@
         </footer>
     </main>
 </body>
+<script>
+    function Scrollativo() {
+    let menu = document.querySelector('#menu');//retorna o primeiro elemento do documento com id menu
+    menu.classList.toggle('ativo', scrollY > 0);
+}
+window.addEventListener('scroll', Scrollativo);//adicionando evento de rolagem
+</script>
 </html>
