--- a/registro/cadastro.html
+++ b/registro/cadastro.html
@@ -14,27 +14,27 @@
             <img src="../assets/LOGO-LouerTech-versaoprincipal.png" alt="Logo LouerTech">
             <h2>Cadastro</h2>
                 <div class="inputs">
-                    <input id="nome" type="text" name="nome" maxlength="50" size="50" placeholder="Nome:" required>
-                    <input id="nome" type="text" name="nome" maxlength="50" size="50" placeholder="Sobrenome:" required>
+                    <input id="nome" type="text" name="nome" maxlength="50" size="50" placeholder="Nome:" >
+                    <input id="nome" type="text" name="nome" maxlength="50" size="50" placeholder="Sobrenome:" >
                 </div>
 
                 <input id="e-mail" type="email" name="mail"
-                maxlength="50" size="50" placeholder="Seu e-mail:" required>
+                maxlength="50" size="50" placeholder="Seu e-mail:" >
 
-                <input id="Número" type="tel" name="numero" maxlength="50" size="50" placeholder="Número de telefone:" required> 
+                <input id="Número" type="tel" name="numero" maxlength="50" size="50" placeholder="Número de telefone:" > 
 
-                <input id="instituicao" type="text" name="instituiçao" maxlength="50" size="50" placeholder="Instituição:" required>
+                <input id="instituicao" type="text" name="instituiçao" maxlength="50" size="50" placeholder="Instituição:" >
 
-                <input id="senha" type="password" name="senha" maxlength="50" size="50" placeholder="Senha:" required> 
+                <input id="senha" type="password" name="senha" maxlength="50" size="50" placeholder="Senha:" > 
 
-                <input id="Confirmar" type="password" name="confirmar" maxlength="50" size="50" placeholder="Confirmar senha:" required> 
+                <input id="Confirmar" type="password" name="confirmar" maxlength="50" size="50" placeholder="Confirmar senha:" > 
 
-                <input id="text" type="text" name="" id="" placeholder="Detalhe o seu evento:" required>
+                <input id="text" type="text" name="" id="" placeholder="Detalhe o seu evento:" >
 
                 <input type="date" name="" id="">
                 
                 <div class="sim">
-                    <input id="sim" type="checkbox" name="opcao" value="fire" required>
+                    <input id="sim" type="checkbox" name="opcao" value="fire" >
                     <p>Eu concordo com os <span>Termos de Serviço</span> e <span>Política de Privacidade</span></p>
                 </div>
 
