--- a/home/home.html
+++ b/home/home.html
@@ -83,7 +83,7 @@
                     de trabalhos de conclusões de curso,
                     <br>
                     estande e apresentações empresáriais.
-
+                </div>
             </div>
 
             <div class="div_informativos">
@@ -103,7 +103,7 @@
                     para exibição e acessibilidade das
                     <br>
                     plataformas apresentadas.
-
+                    </div>
             </div>
 
             <div class="div_informativos">
@@ -123,7 +123,7 @@
                     para exibição e acessibilidade das
                     <br>
                     plataformas apresentadas.
-
+                </div>
             </div>
         </div>
 
