--- a/home/home.html
+++ b/home/home.html
@@ -48,7 +48,7 @@
             <img src="../assets/apresentação.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/apresentação2.jpg" class="d-block w-100" alt="...">
+            <img src="../assets/orador-afro-americano-feminino-dando-apresentacao-no-salao-na-oficina-da-universidade.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="../assets/funcionarios.jpg" class="d-block w-100" alt="...">
