--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     </section>
 
-    <footer>
+    <footer style="height: 400px;">
         <div class="conteudo_footer">
             <div class="divs_footer">
                 <img src="assets/LOGO-LouerTech-versaobranca.png" alt="">
@@ -185,7 +185,7 @@
                 <a href="#busca_equipamentos"><span class="material-symbols-outlined">expand_less</span></a>
             </div>
         </div>
-        <div class="copyright">
+        <div class="copyright" style="margin-top: 40px;">
             <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
         </div>
     </footer>
