--- a/registro/cadastro.html
+++ b/registro/cadastro.html
@@ -58,6 +58,7 @@
 let button= document.querySelector("button");
 
 button.addEventListener("click", function(){
+    setTimeout(button, 5000);
     let modal= document.querySelector(".modal");
     let janela= document.querySelector(".janela_modal");
 
