--- a/home/home.html
+++ b/home/home.html
@@ -87,7 +87,9 @@ softwares, KPI's, indicadores de forma <br>
 mais explicita sendo observada por um <br>
 monitor e também de extrema importância <br>
 para exibição e acessibilidade das <br>
-plataformas apresentadas. <br>
+plataformas apresentadas.
+    
+<br>
         </p>
     </div>
 
@@ -112,6 +114,63 @@ plataformas apresentadas. <br>
 </div>
 
 </section>
+
+<section id="fundo2">
+
+    <H1>Segmentos</H1 data-aos="fade-up" >
+    <br> 
+    <div class="textos_1" data-aos="fade-up">
+        <img src="../assets/faculdade.png" class="imagen_icone">
+        <p>
+            <h4>Faculdades Publicas</h4> <br>
+            Você aluno de faculdade pública, <br>
+            que precisa participar de um estande para <br> 
+            a feira da faculdade, conte a nós o que é  <br>
+            preciso de técnologia para te ajudarmos! <br>
+        </p>
+    </div>
+    <div class="textos_1" data-aos="fade-down">
+        <img src="../assets/apresent.png" class="imagen_icone1">
+        <p>
+            <h4>Profissionais </h4> <br>
+            temos a melhor solução outsourcing, <br>
+            de quaisquer equipamentos de informática<br> 
+            para sua empresa, realize a cotação para <br>
+            automatizar seus procedimentos empresáriais. <br>
+        </p>
+    </div>
+    <div class="textos_1" data-aos="fade-up">
+        <img src="../assets/companhia (1).png" class="imagen_icone2">
+        <p>
+            <h4>Instituições</h4><br>
+            Temos solução para alunos e tutores <br>
+            que precisam de equipamentos para experimentos <br>
+            e trabalhos acadêmicos. Fornecemos os melhores <br>
+            equipamentos e materiais, além de orientações e dicas.<br>
+        </p>
+    </div>
+
+
+    <section id="formulario1">
+
+        <div id="divdoformulario">
+
+        <h2 id="formula">Conte conosco para simplificar sempre!</h2>
+        <p> Estamos aqui para solucionar e <br>
+            e facilitar seus projetos, preencha <br>
+            o formulário abaixo para conversarmos! <br>
+        </p>
+
+        <div>
+            <br>
+         <div class="formularinho" data-aos="fade-up" > <label id="lab">Nome:</label><input type="text" placeholder="Insira seu nome"> <label for="">Sobrenome: </label><input type="text" placeholder="Insira seu sobrenome"> </div><br> 
+         <div class="formularinho" data-aos="fade-down"> <label for="">Insituição/ Empresa:</label> <input type="text" placeholder="Informe sua instiuição ou empresa:"> <label for="">Segmentos:</label><input type="text" placeholder="informe o segmento"> </div><br>
+         <div class="formularinho" data-aos="fade-up"> <label for="">CNPJ/CPF:</label><input type="text" placeholder="Informe seu CNPJ ou CPF"> <label for="">E-mail:</label><input type="text" placeholder="informe seu E-mail"> </div> <br>
+         <div class="formularinho" data-aos="fade-down"> <label for="">Telefone:</label><input type="text" placeholder="Informe seu número"><label for="">Fale mais sobre seu projeto: </label> <input id="fale_mais" type="text" placeholder="Adicione informações"> </div> <br>
+        </div>
+        </div>
+    </section>
+    
 
     <footer style="height: 400px;">
         <div class="conteudo_footer">
