--- a/home/home.html
+++ b/home/home.html
@@ -227,10 +227,12 @@ plataformas apresentadas. <br>
                 <a href="#busca_equipamentos"><span class="material-symbols-outlined">expand_less</span></a>
             </div>
         </div>
+        </footer>
+        <section>
         <div class="copyright" style="margin-top: 40px;">
             <p>© 2023 LouerTech. Todos os direitos estão reservados. Desenvolvido por RenTech.</p>
         </div>
-    </footer>
+    </section>
 </body>
 <script>
     function Scrollativo() {
