Ok, links na logo

--- a/login/login.html
+++ b/login/login.html
@@ -18,7 +18,7 @@
         <div class="form login"> <!--inicio do fundo branco do login-->
             <div class="form-content"> 
                 <header>
-                    <img src="../assets/LOGO-UC2-removebg-preview 9.png" alt="logo" >
+                    <a href="../home/home.html" style="background-color: transparent; border: none; box-shadow: none ;"> <img src="../assets/LOGO-UC2-removebg-preview 9.png" alt="logo" > </a>
                     <h3>Login</h3>
 
 
