--- a/registro/cadastro.html
+++ b/registro/cadastro.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <form>
-            <img src="../assets/LOGO-LouerTech-versaoprincipal.png" alt="Logo LouerTech">
+           <a href="../home/home.html" style="background-color: transparent; border: none; box-shadow: none ;"><img src="../assets/LOGO-LouerTech-versaoprincipal.png" alt="Logo LouerTech"> </a>
             <h2>Cadastro</h2>
                 <div class="inputs">
                     <input id="nome" type="text" name="nome" maxlength="50" size="50" placeholder="Nome:" >
